--- a/404.md
+++ b/404.md
@@ -6,7 +6,7 @@ comments: false
 share: false
 ---  
 
-Sorry, but the page you were trying to view does not exist --- perhaps you can try searching for it below.
+Sorry, but the page you were trying to view does not exist.
 
 <script type="text/javascript">
   var GOOG_FIXURL_LANG = 'en';
