--- a/404.md
+++ b/404.md
@@ -2,6 +2,11 @@
 layout: page
 permalink: /404.html
 ---
-<h2> Sorry the Page you are looking for does not exist ! </h2>
 
-<button class="btn btn-lg btn-default"><a href="/">Back to Home</a></button>
+<div style="display: flex; flex-direction: column; align-items: center">
+    <h2>Uh-oh!</h2>
+    <h4>The page you are looking for does not exist!</h4>
+    <a href="/" class="btn btn-lg btn-default">
+        Back to Home
+    </a>
+</div>
