--- a/_posts/posts/2022-06-17-nobseng.md
+++ b/_posts/posts/2022-06-17-nobseng.md
@@ -2,6 +2,10 @@
 layout: post
 title: The No-Bullshit Guide into Building Software
 date: '2022-06-17'
+tags: [software, engineering, project, management]
+image:
+  path: https://github.com/aziflaj/aziflaj.github.io/blob/main/assets/images/20220617/1.png?raw=true
+  alt: "nobseng"
 ---
 
 > Yesterday I did a presentation titled "The No Bullshit Guide into Building
@@ -10,8 +14,6 @@ date: '2022-06-17'
 > software. This blogpost is created by reusing the notes I wrote before the
 > presentation, and what was said during the event doesn't go far away from what
 > is written here. You can find the slides [here](https://speakerdeck.com/aziflaj/no-bullshit-guide-into-building-software)
-
-![](/images/20220617/1.png)
 
 I'm assuming all of us here are doing something towards building, or helping to 
 build, software. We're all at different stages of our career and we all have
@@ -35,7 +37,7 @@ as frontend developers, along with the lack of experience and that of the maturi
 of the front-end as an engineering practice, the No-Bullshit Guide into 
 Building Software could be summarised as...
 
-![](/images/20220617/2.png)
+![](https://github.com/aziflaj/aziflaj.github.io/blob/main/assets/images/20220617/2.png?raw=true)
 
 _Welcome to my TED Talk, are there any questions?_
 
@@ -43,7 +45,7 @@ _Welcome to my TED Talk, are there any questions?_
 > numbnuts, but it's fun having a go at your community.
 
 
-![](/images/20220617/3.png)
+![](https://github.com/aziflaj/aziflaj.github.io/blob/main/assets/images/20220617/3.png?raw=true)
 
 So who am I? Yada yada yada, I work for a Finnish scale-up called Leadfeeder,
 and before that I worked in this other local start-up called Publer that almost all of you have heard before. All
@@ -51,7 +53,7 @@ that I'm sharing with you today are opinions backed by my experience, and in no
 way are the absolute truth. If you disagree with me I'm very open to discussion,
 maybe one of us ends up changing their mind.
 
-![](/images/20220617/4.png)
+![](https://github.com/aziflaj/aziflaj.github.io/blob/main/assets/images/20220617/4.png?raw=true)
 
 Before moving ahead, it's better to define some terminology. What I mean by 
 _bullshit_ during this presentation, is anything that makes building 
@@ -61,7 +63,7 @@ is bullshit. And on the other hand, anything that you love but isn't needed to
 the software you're building works towards clouding your judgement, so is 
 therefore also bullshit.
 
-![](/images/20220617/5.png)
+![](https://github.com/aziflaj/aziflaj.github.io/blob/main/assets/images/20220617/5.png?raw=true)
 
 Now you all know, or you're supposed to know, what the software process is. 
 Either some waterfall (which is cool) or some agile (which is also cool) or even
@@ -77,7 +79,7 @@ And usually, the bullshit these two actors introduce into the process always
 affects the other actor. And what's something all Product People love and all (well, most
 of) the Devs hate?
 
-![](/images/20220617/6.png)
+![](https://github.com/aziflaj/aziflaj.github.io/blob/main/assets/images/20220617/6.png?raw=true)
 
 Meetings. Geez, PMs want to have a call for everything. They want to have a call
 for this and a call for that, and they 
@@ -105,7 +107,7 @@ And estimations are never right.
 
 So, for a better PMing experience...
 
-![](/images/20220617/7.png)
+![](https://github.com/aziflaj/aziflaj.github.io/blob/main/assets/images/20220617/7.png?raw=true)
 
 - **Write better specs**. Give your developers all the tools they need in order to build 
 what you have in mind. Whether it be mockups, user stories, actual VS 
@@ -140,7 +142,7 @@ product-specific questions. And always...
 like, and even better at pushing away tasks they don't want to _"lose time with"_. 
 So one of the things you'll hear most often from developers is:
 
-![](/images/20220617/8.png)
+![](https://github.com/aziflaj/aziflaj.github.io/blob/main/assets/images/20220617/8.png?raw=true)
 
 **"We'll do it later"**. Surprise surprise, we won't. This is just one thing we tell
  you so we don't "lose time" on "unnecessary shit". And how we prioritise, 
@@ -163,7 +165,7 @@ to our problems. We forget that the field of Software Engineering has existed si
 the 60s and  that in the last 60 years, most of the problems faced by most of the people 
 already have a well-tested approach. 
 
-![](/images/20220617/9.png)
+![](https://github.com/aziflaj/aziflaj.github.io/blob/main/assets/images/20220617/9.png?raw=true)
 
 So maybe, the first thing to do is to realise that old tech, that one 
 thing that didn't really evolve for the past 20 years (or 5 years if you're a JS 
